// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBase renders all appearances with props 1`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #704fe5;
}

.emotion-0:focus:after {
  border: 2px solid #704fe5;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #FFFFFF;
  fill: #FFFFFF;
  background-color: #7D58FF;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: #FFFFFF;
  fill: #FFFFFF;
}

.emotion-1:hover {
  background-color: #704fe5;
}

.emotion-1:active {
  background-color: #6446cc;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 2`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: transparent;
}

.emotion-0:focus:after {
  border: 2px solid #704fe5;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-0:focus:after {
  border-radius: 0;
  border-left-width: 0;
  border-right-width: 0;
  border-top-width: 0;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: var(--themeTextColorInteractive, #7D58FF);
  fill: var(--themeTextColorInteractive, #7D58FF);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1:hover {
  color: #704fe5;
  fill: #704fe5;
}

.emotion-1:active {
  color: #6446cc;
  fill: #6446cc;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: var(--themeTextColorInteractive, #7D58FF);
  fill: var(--themeTextColorInteractive, #7D58FF);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 3`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #c4c6cb;
}

.emotion-0:focus:after {
  border: 2px solid #c4c6cb;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #1B2029;
  fill: #1B2029;
  background-color: #DADDE2;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: #1B2029;
  fill: #1B2029;
}

.emotion-1:hover {
  background-color: #c4c6cb;
}

.emotion-1:active {
  background-color: #aeb0b4;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 4`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #d32434;
}

.emotion-0:focus:after {
  border: 2px solid #d32434;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #FFFFFF;
  fill: #FFFFFF;
  background-color: #EB293A;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: #FFFFFF;
  fill: #FFFFFF;
}

.emotion-1:hover {
  background-color: #d32434;
}

.emotion-1:active {
  background-color: #bc202e;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 5`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #12b276;
}

.emotion-0:focus:after {
  border: 2px solid #12b276;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #1B2029;
  fill: #1B2029;
  background-color: #14C684;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: #1B2029;
  fill: #1B2029;
}

.emotion-1:hover {
  background-color: #12b276;
}

.emotion-1:active {
  background-color: #109e69;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 6`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #e09224;
}

.emotion-0:focus:after {
  border: 2px solid #e09224;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  color: #1B2029;
  fill: #1B2029;
  background-color: #F9A328;
  border-radius: 4px;
  padding: 10px 18px;
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1[href],
.emotion-1[href]:visited {
  color: #1B2029;
  fill: #1B2029;
}

.emotion-1:hover {
  background-color: #e09224;
}

.emotion-1:active {
  background-color: #c78220;
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`ButtonBase renders all appearances with props 7`] = `
<DocumentFragment>
  .emotion-0 {
  outline: none;
  position: relative;
}

.emotion-0:focus {
  background-color: #704fe5;
}

.emotion-0:focus:after {
  border: 2px solid #704fe5;
  border-radius: 4px;
  bottom: -3px;
  content: "";
  left: -3px;
  position: absolute;
  right: -3px;
  top: -3px;
}

.emotion-0:focus {
  background-color: #F8F6FF;
}

.emotion-0:focus:after {
  bottom: -4px;
  left: -4px;
  right: -4px;
  top: -4px;
}

.emotion-1 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
  border: 1px solid #7D58FF;
  border-radius: 4px;
  padding: 10px 18px;
  color: var(--themeTextColorInteractive, #7D58FF);
  fill: var(--themeTextColorInteractive, #7D58FF);
  cursor: pointer;
  display: inline-block;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 500;
  text-align: center;
  width: 100%;
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
  border-color: var(--themeBgDisabled, #E8EAED);
  cursor: default;
  pointer-events: none;
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-1::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1:hover {
  background-color: #F8F6FF;
  color: #704fe5;
  fill: #704fe5;
}

.emotion-1:active {
  background-color: #E5DDFF;
  color: #6446cc;
  fill: #6446cc;
}

.emotion-1[href],
.emotion-1[href]:visited {
  background-color: #E5DDFF;
  color: var(--themeTextColorInteractive, #7D58FF);
  fill: var(--themeTextColorInteractive, #7D58FF);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  color: var(--themeTextColorDisabled, #AEB0B4);
  fill: var(--themeTextColorDisabled, #AEB0B4);
}

.emotion-1:hover,
.emotion-1:focus,
.emotion-1:active {
  background-color: var(--themeBgDisabled, #E8EAED);
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
}

.emotion-2>div {
  width: auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-4 {
  vertical-align: middle;
  fill: inherit;
}

.emotion-4 use {
  pointer-events: none;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  padding-left: 8px;
}

.emotion-5:after {
  content: "...";
}

.emotion-6 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
  padding-left: 4px;
}

<button
    aria-haspopup="true"
    class="emotion-0 emotion-1"
    disabled=""
    tabindex="0"
    type="submit"
  >
    <span
      class="emotion-2"
    >
      <span
        class="emotion-3"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Button
      </span>
      <span
        class="emotion-6"
      >
        <svg
          aria-label="system-check icon"
          class="emotion-4"
          data-cy="icon"
          height="16"
          preserveAspectRatio="xMinYMin meet"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <use
            xlink:href="#system-check"
          />
        </svg>
      </span>
    </span>
  </button>
</DocumentFragment>
`;
